# 2024

./: .gitignore  LICENSE  README.md
.github/workflows/: github-actions-demo.yml
Basic/Basic_Of_Python/: README.md  pyproject.toml
Basic/Basic_Of_Python/basic_of_python/: __init__.py
Basic/Basic_Of_Python/src/: __init__.py  factorial.py  fibonaci.py  occurrence_char.py  prime_numbers.py  thread.py
Basic/Basic_Of_Python/tests/: prime_test.py
Pandas/Olympic/: pyproject.toml
Pandas/Olympic/src/: India_Olympics.ipynb  Olympic.ipynb
Pandas/Olympic/src/Fraud/: Fraud.ipynb
